# dvmn-fastai

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  env_settings.py  example.env  frontend-settings.json  gut.py  minio_prototype.py  pyproject.toml
apps/frontend/: app.py
src/: main.py
src/apps/frontend/: __init__.py
src/core/: config.py  dependencies.py  logs.py
src/frontend/: app.py
src/frontend_api/: app.py  mocks.py
src/frontend_api/sites/: routes.py  schemas.py
src/frontend_api/users/: routes.py
src/routers/frontend/: __init__.py  mocks.py
src/routers/frontend/sites/: routes.py  schemas.py
src/routers/frontend/users/: routes.py  schemas.py
src/services/: gotenberg.py  s3.py
