[project]
name = "fastai-nikolai"
version = "0.0.1"
description = "Fastai backend"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "aiofiles>=24.1.0",
    "editorconfig-checker==3.2.1",
    "fastapi[standard]==0.115.12",
    "pre-commit>=4.3.0",
    "pydantic>=2.11.7",
    "ruff==0.11.13",
]
