[project]
name = "fastai-nikolai"
version = "0.0.1"
description = "Fastai backend"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "aioboto3>=15.1.0",
    "fastapi[standard]==0.115.12",
    "furl>=2.1.4",
    "gotenberg-api",
    "html-page-generator",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "types-aiofiles>=24.1.0.20250822",
    "editorconfig-checker==3.2.1",
    "pre-commit>=4.3.0",
    "ruff==0.11.13",
]

[tool.mypy]
python_version = "3.13"
files = ["src"]
plugins = ["pydantic.mypy"]

warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = false
strict_equality = true
show_error_codes = true
pretty = true
exclude = [
    "^.*/__pycache__/.*$",
    "^.*/\\.venv/.*$",
    "^.*/env/.*$",
    "^.*/venv/.*$",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_untyped_fields = true

[tool.uv.sources]
html-page-generator = { git = "https://github.com/devmanorg/html-page-generator.git" }
gotenberg-api = { git = "https://github.com/devmanorg/gotenberg-api.git" }
